<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetalleFragment" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardBackgroundColor="@color/black_text"
        app:cardCornerRadius="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivDetImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvDetNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:text="Nombre"
                android:textColor="@color/white"
                android:textSize="33dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetYearTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="21dp" />

                <TextView
                    android:id="@+id/tvDetYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginBottom="7dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="21dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDetDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="7dp"
                android:text="@string/descriptionexample"
                android:textColor="@color/white"
                android:textSize="21dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardBackgroundColor="@color/divider"
        app:cardCornerRadius="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="77dp"
                    android:layout_marginEnd="33dp"
                    android:text="2-4"
                    android:textColor="@color/black_text"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetPlayT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="70dp"
                    android:text="45-90 Min"
                    android:textColor="@color/black_text"
                    android:textSize="21dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetPlayersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:text="@string/players"
                    android:textColor="@color/black_text"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvDetPlayTTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginEnd="44dp"
                    android:text="@string/playing_t"
                    android:textColor="@color/black_text"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="77dp"
                    android:layout_marginEnd="77dp"
                    android:text="13+"
                    android:textColor="@color/black_text"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="500 USD"
                    android:textColor="@color/black_text"
                    android:textSize="21dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetAgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/age"
                    android:textColor="@color/black_text" />

                <TextView
                    android:id="@+id/tvDetPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/price"
                    android:textColor="@color/black_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetDesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:text="@string/designer"
                    android:textColor="@color/black_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Paul Dennen"
                    android:textColor="@color/black_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetArtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:text="@string/artist"
                    android:textColor="@color/black_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="Clay Brooks"
                    android:textColor="@color/black_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDetPubliTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:text="@string/publisher"
                    android:textColor="@color/black_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetPubli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="Dire Wolf"
                    android:textColor="@color/black_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDetBuy"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="@color/green_dark"
                    android:text="@string/buy"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btnDetAdd"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/add"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btnDetSub"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="@color/grey_text"
                    android:text="@string/subscribe"
                    android:textSize="14dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>